# vcal_sphere

./: README.rst  VCAL_QUICKSTART.txt  pyproject.toml  setup.py
Examples/: VCAL_params_postproc_IFS.json  VCAL_params_postproc_IRDIS_ADI.json  VCAL_params_postproc_IRDIS_RDI.json  VCAL_params_preproc_IFS.json  VCAL_params_preproc_IRDIS_H23_1CEN.json  VCAL_params_preproc_IRDIS_Ks_2CEN.json
Manual/: VCAL_MANUAL_for_CALIBRATION.txt  VCAL_MANUAL_for_POSTPROCESSING_IFS.txt  VCAL_MANUAL_for_PREPROCESSING_IFS.txt  VCAL_MANUAL_for_PREPROCESSING_IRDIS.txt
src/vcal/: __init__.py
src/vcal/calib/: calib_SPHERE.py
src/vcal/postproc/: postproc_IFS.py  postproc_IRDIS.py
src/vcal/preproc/: preproc_IFS.py  preproc_IRDIS.py
src/vcal/static/: sphere_filt_spec.json
src/vcal/utils/: utils_calib.py
src/vcal_sphere/calib/: calib_SPHERE.py
src/vcal_sphere/postproc/: postproc_IFS.py  postproc_IRDIS.py
src/vcal_sphere/preproc/: preproc_IFS.py  preproc_IRDIS.py
src/vcal_sphere/static/: ifs_lenslet_model_Y_J.txt
vcal.egg-info/: PKG-INFO  SOURCES.txt
vcal/calib/: calib_SPHERE.py
vcal/postproc/: postproc_IFS.py  postproc_IRDIS.py
vcal/preproc/: preproc_IFS.py  preproc_IRDIS.py
vcal/utils/: utils_calib.py
vcal_sphere/calib/: calib_SPHERE.py
vcal_sphere/postproc/: postproc_IFS.py
vcal_sphere/preproc/: preproc_IFS.py  preproc_IRDIS.py
