[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "vcal_sphere"
dynamic = ["version", "description"]
version = "2026.01.13"
description = "A package for VLT/SPHERE data reduction."
readme = "README.rst"
authors = [
  { name = "Valentin Christiaens", email = "valentin.christiaens@uliege.be" },
  { name = "Iain Hammond", email = "iahammond@mpia.de" },
]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "vip-hci",
    "hciplot",
    "numba",
]

[dependency-groups]
dev = [
    "sphinx",
    "pandoc",
    "pytest",
    "codecov",
    "flake8",
    "flake8-bandit",
    "flake8-docstrings",
    "autopep8"
]

[project.urls]
Source = "https://github.com/VChristiaens/vcal_sphere"
Docs = "https://github.com/VChristiaens/vcal_sphere/issues"
